# pure-ftpd

./: .gitignore  .travis-libsodium.sh  .travis.yml  AUTHORS  CONTACT  COPYING  ChangeLog  FAQ  HISTORY  Makefile.am  Makefile.gui  NEWS  README  README.Authentication-Modules  README.Configuration-File  README.Contrib  README.Debian  README.Donations  README.LDAP  README.MacOS-X  README.MySQL  README.PGSQL  README.TLS  README.Threaded  README.Virtual-Users  README.Windows  README.iOS  README.iPhone  THANKS  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  felipe-tls.pem  handle_sni.pl  index.html  minisign.pub  pure-ftpd.conf.in  pure-ftpd.service  (+6 more)
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml  shiftleft-analysis.yml
configuration-file/: Makefile.am  pure-config.pl.in  pure-config.py.in  pure-ftpd.conf.in
contrib/: Makefile.am  pure-stat.pl  pure-vpopauth.pl  redhat.init  suse.init  xml_python_processors.txt
gui/: Makefile.am  build.sh
iphone/: Makefile.am  compile-iphoneOS.sh  pureftpd.h
iphone/Test/: MainWindow.xib  Test-Info.plist  TestViewController.xib  Test_Prefix.pch  main.m
iphone/Test/Classes/: TestAppDelegate.h  TestAppDelegate.m  TestViewController.h  TestViewController.m
iphone/Test/Test.xcodeproj/: j.mode1v3  j.pbxuser  project.pbxproj
m4/: Makefile.am  ax_check_compile_flag.m4  ax_check_link_flag.m4
man/: Makefile.am  pure-authd.8  pure-authd.8.in  pure-certd.8.in  pure-ftpd.8  pure-ftpd.8.in  pure-ftpwho.8  pure-ftpwho.8.in  pure-mrtginfo.8  pure-mrtginfo.8.in  pure-pw.8  pure-pw.8.in  pure-pwconvert.8  pure-pwconvert.8.in  pure-quotacheck.8.in  pure-statsdecode.8  pure-statsdecode.8.in  pure-uploadscript.8  pure-uploadscript.8.in
pam/: Makefile.am  README  ftpusers  pure-ftpd
puredb/: Makefile.am  README  README.FIRST
puredb/src/: Makefile.am  example_read.c  example_write.c  puredb_p.h  puredb_read.c  puredb_read.h  puredb_write.c  puredb_write.h  regression.c
src/: Makefile.am  alt_arc4random.c  alt_arc4random.h  alt_arc4random_p.h  altlog.c  altlog.h  bonjour.c  bonjour.h  bsd-getopt_long.c  bsd-getopt_long.h  bsd-glob.c  bsd-glob.h  bsd-realpath.c  bsd-realpath.h  caps.c  caps.h  caps_p.h  crypto-md5.c  crypto-md5.h  crypto-sha1.c  crypto-sha1.h  crypto.c  crypto.h  daemons.c  diraliases.c  diraliases.h  dynamic.c  dynamic.h  fakechroot.c  fakechroot.h  fakesnprintf.c  fakesnprintf.h  ftp_parser.c  ftpd.c  ftpd.h  ftpd_p.h  ftpwho-read.c  ftpwho-read.h  ftpwho-update.c  ftpwho-update.h  (+92 more)
