    
EXTRA_DIST = \
	THANKS \
	HISTORY \
	CONTACT \
	FAQ \
	Makefile.gui \
	README.LDAP \
	README.MySQL \
	README.PGSQL \
	README.Configuration-File \
	README.Virtual-Users \
	README.Authentication-Modules \
	README.Windows \
	README.TLS \
	README.MacOS-X \
	README.Donations \
	pureftpd.schema \
	pureftpd-ldap.conf \
	pureftpd-mysql.conf \
	pureftpd-pgsql.conf \
	pure-ftpd.png
	
SUBDIRS = \
	puredb \
	src \
	man \
	pam \
	gui \
	m4

sysconf_DATA = \
	pure-ftpd.conf
