man_MANS = \
	pure-ftpd.8 \
	pure-ftpwho.8 \
	pure-mrtginfo.8 \
	pure-uploadscript.8 \
	pure-statsdecode.8 \
	pure-quotacheck.8 \
	pure-pw.8 \
	pure-pwconvert.8 \
	pure-authd.8

EXTRA_DIST = \
	pure-ftpd.8.in \
	pure-ftpwho.8.in \
	pure-mrtginfo.8.in \
	pure-uploadscript.8.in \
	pure-statsdecode.8.in \
	pure-quotacheck.8.in \
	pure-pw.8.in \
	pure-pwconvert.8.in \
	pure-authd.8.in
